@@ -92,11 +92,11 @@ abstract class tx_community_controller_AbstractCommunityApplicationWidget implem
 		$content = '';
 		$communityRequest = t3lib_div::GParrayMerged('tx_community');;
 
+
 		$widgetConfiguration = $GLOBALS['TX_COMMUNITY']['applicationManager']->getWidgetConfiguration(
 			$this->communityApplication->getName(),
 			$this->getName()
 		);
-
 			// dispatch
 		if (!empty($communityRequest[$this->name . 'Action'])
 			&& method_exists($this, $communityRequest[$this->name . 'Action'] . 'Action')
