@@ -1,0 +1,24 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Template for the user profile's personal information widget</title>
+</head>
+<body>
+
+<!-- ###WIDGET_WIDGET### begin -->
+<dl>
+	<dt>Actions</dt>
+	<dd>###WIDGET:userProfile.profileActions|USER###</dd>
+
+	<dt>Image</dt>
+	<dd>###WIDGET:userProfile.image|USER###</dd>
+
+	<dt>Personal information</dt>
+	<dd>###WIDGET:userProfile.personalInformation|USER###</dd>
+</dl>
+<!-- ###WIDGET_WIDGET### end -->
+
+</body>
+</html>
